Fix modal text for dark mode

--- a/src/profile/components/ManageResume/style.less
+++ b/src/profile/components/ManageResume/style.less
@@ -20,6 +20,10 @@
       display: none;
     }
 
+    span {
+      color: @gray-900; // theme-text-on-background-1 for light mode
+    }
+
     .upload-area {
       background: @gray-400;
       border-radius: 8px;
